# finance-manager

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.es.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/security-audit/: SKILL.md  guide.md
.github/workflows/: release.yml
crates/finanzas-core/: Cargo.toml
crates/finanzas-core/src/: budget.rs  credit.rs  error.rs  goals.rs  lib.rs  market.rs  models.rs  notify.rs  period.rs  subscription.rs  wallet_yield.rs
crates/finanzas-core/src/investments/: bonddia.rs  cetes.rs  crypto.rs  fixed_rate.rs  manual.rs  mod.rs  nu_cajita.rs  simulate.rs  xirr.rs
design/: ios-redesign.html
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  INVESTMENTS.md  PLAN.md  ROADMAP.md
scripts/: finanzas-open  migrate_to_d1.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: dashboard.rs  investments.rs  mod.rs  settings.rs  transactions.rs  wallets.rs
src-tauri/src/db/: mod.rs
src-tauri/src/investments/: bonddia.rs  cetes.rs  crypto.rs  fixed_rate.rs  manual.rs  mod.rs  nu_cajita.rs
src/components/: BrandLogo.tsx  Button.tsx  ColorPicker.tsx  ConfirmDialog.tsx  DashboardGrid.tsx  DateInput.tsx  EmptyState.tsx  Field.tsx  Gauge.tsx  GoogleIcon.tsx  InstallButton.tsx  Modal.tsx  MoneyInput.tsx  PageHeader.tsx  ProgressBar.tsx  StatWidget.tsx  ThemeToggle.tsx  TimeInput.tsx  TrendBadge.tsx  WalletCard.tsx
src/features/appearance/: AppearancePage.tsx
src/features/auth/: LoginPage.tsx
src/features/budgets/: BudgetsPage.tsx
src/features/categories/: CategoriesPage.tsx
src/features/dashboard/: DashboardPage.tsx  FlowChart.tsx  PeriodPicker.tsx  usePeriod.ts
src/features/dashboard/widgets/: BreakdownWidget.tsx  BudgetWidget.tsx  CategoryDetailModal.tsx  FlowRangeWidget.tsx  GoalsWidget.tsx  SubscriptionsWidget.tsx
src/features/goals/: ContributeModal.tsx  GoalCard.tsx  GoalFormModal.tsx  SavingsGoalsPage.tsx  WalletGoalsSection.tsx
src/features/investments/: InvestmentDetailPage.tsx  InvestmentFormModal.tsx  InvestmentsPage.tsx  PortfolioSummary.tsx  SimulatorPage.tsx
src/features/notifications/: InvestmentRemindersCard.tsx  NotificationBell.tsx  NotificationSettingsPage.tsx  NotificationsPanel.tsx  prefs.ts  render.ts
src/features/settings/: BanxicoSection.tsx  CategoryManagerModal.tsx  ChangePasswordPage.tsx  ExchangeRatesSection.tsx  SettingsPage.tsx
src/features/subscriptions/: SubscriptionsPage.tsx
src/features/transactions/: OutboxPanel.tsx  TransactionFormModal.tsx  TransactionList.tsx  TransactionsPage.tsx
src/features/update/: UpdateBanner.tsx  WhatsNew.tsx
src/features/wallets/: CreditCardPanel.tsx  WalletDetailPage.tsx  WalletFormModal.tsx  WalletsPage.tsx  msiSchedule.tsx
src/i18n/: en.ts  es.ts  seed.ts  store.ts
src/lib/: api.ts  appearance.ts  auth.ts  brandIcons.ts  changelog.ts  date.ts  device.ts  hideBalance.ts  money.ts  online.ts  outbox.ts  palette.ts  skins.ts  theme.ts  timeFormat.ts  timezone.ts  types.ts  useDesktopDownload.ts  usePwaInstall.ts
worker/: Cargo.toml  wrangler.toml
worker/migrations/: 0001_schema.sql  0002_seed.sql  0003_account.sql  0004_google.sql  0005_goals_budgets_subscriptions.sql  0006_wallet_skin.sql  0007_wallet_sort_order.sql  0008_category_customization.sql  0009_category_colors_and_order.sql  0010_auth_attempts.sql  0011_exchange_rates_per_user.sql  0012_wallet_yield.sql  0013_movement_wallet_link.sql  0014_budget_limit_history.sql  0015_goal_snapshots.sql  0016_subscription_window.sql  0017_goal_wallet_link.sql  0018_goal_sort_order.sql  0019_goal_apartado.sql  0020_subscription_payment_link.sql  0021_goal_deadline.sql  0022_goal_contributions.sql  0023_goal_category.sql  0024_backfill_goal_category.sql  0025_goal_kind.sql  0026_wallet_parent.sql  0027_credit_card.sql  0028_msi_category.sql  0029_notifications.sql  0030_goal_plan_anchor.sql  0031_notification_email.sql  0031_transaction_time.sql  0032_backfill_transaction_time.sql
worker/src/: db.rs  email.rs  email_text.rs  error.rs  lib.rs  market.rs  rpc.rs
worker/src/auth/: google.rs  mod.rs  password.rs
worker/src/handlers/: analytics.rs  budgets.rs  credit.rs  dashboard.rs  goals.rs  investments.rs  mod.rs  notifications.rs  settings.rs  subscriptions.rs  transactions.rs  wallet_yield.rs  wallets.rs
