[workspace]
resolver = "2"
members = ["crates/finanzas-core", "src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
finanzas-core = { path = "crates/finanzas-core" }

# Sized for the Cloudflare Worker WASM (3 MB gzipped limit). The desktop app
# shares the profile; size over speed is fine for this workload.
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
