[package]
name = "finanzas"
version = "1.3.1"
description = "Personal finance desktop app"
authors = ["AsuraBeliever"]
edition = "2021"

[lib]
# The `_lib` suffix is necessary so the lib name doesn't conflict with the bin
# name on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "finanzas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
