[package]
name = "finanzas"
version = "2.13.2"
description = "Personal finance desktop app"
authors = ["AsuraBeliever"]
edition = "2021"

[lib]
# The `_lib` suffix is necessary so the lib name doesn't conflict with the bin
# name on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "finanzas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
finanzas-core = { workspace = true, features = ["rusqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
