[package]
name = "finanzas-worker"
version = "0.1.0"
description = "Cloudflare Worker: HTTP API + static frontend for Finanzas"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
finanzas-core = { workspace = true }
worker = { version = "0.8", features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# session-token hashing (one SHA-256 per request; cheap even in WASM)
sha2 = "0.10"
hex = "0.4"
# SMTP over worker::Socket (notification emails): async read/write helpers
# and base64 for AUTH PLAIN + UTF-8 subject encoding
tokio = { version = "1", default-features = false, features = ["io-util"] }
base64 = "0.22"
# JS interop for SubtleCrypto (PBKDF2) and crypto.getRandomValues
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
